--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "convict": "^0.8.0",
     "lodash": "^3.9.3",
     "request-promise": "^0.4.3",
-    "request-debug": "^0.2.0"
+    "request-debug": "^0.2.0",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "chai": "^3.0.0",
